--- a/support-frontend/src/styles/UserProfile.css
+++ b/support-frontend/src/styles/UserProfile.css
@@ -75,7 +75,6 @@ html, body {
 
 .back-button {
     background-color: #333;
-    border: 1px solid white;
     color: white;
     padding: 6px 12px;
     border-radius: 6px;
@@ -86,7 +85,7 @@ html, body {
 
 /* Profil Alanı Satırları */
 .profile-row {
-    background-color: #f7f7f7; /* Tüm satırların arka planı açık gri */
+    background-color: #f7f7f7;
     display: flex;
     align-items: center;
     justify-content: space-between;
